# DREGX

./: .gitmodules  CMakeLists.txt  README.md
.deamer/dldl/arguments/: full.deamer  miccel.deamer
CompilerGenerator/: CMakeLists.txt  main.cpp
CompilerGenerator/include/dregx/: CompilerGenerator.h  Generation.h  Grammar.h  Identity.h  Language.h  Lexicon.h  Threat.h
CompilerGenerator/lib/dregx/: Grammar.cpp
definition/dregx/: Generation.dldl  Grammar.dldl  Lexicon.dldl
dregx/: .clang-format  CMakeLists.txt  deamer.cmake
dregx/cmake/: deamer_dregx_specialized.cmake  dregxConfig.cmake.in
dregx/include/Deamer/Dregx/: Analyzer.h  Fuzzer.h  Regex.h
dregx/include/Deamer/Dregx/V2/: CBAnalyzer.h  CBRegex.h  CBStatemachine.h  Regex.h  Statemachine.h
dregx/include/dregx/: dregx.h
dregx/include/dregx/Ast/Enum/: Type.h
dregx/include/dregx/Ast/Listener/: EnterExitListener.h  Listener.h
dregx/include/dregx/Ast/Listener/User/: TranslateToIr.h
dregx/include/dregx/Ast/Node/: A_.h  B_.h  COMMA.h  DELETE_ESCAPE_CHARS.h  LEFT_BRACKET.h  LEFT_CURLY_BRACKET.h  LEFT_SQUARE_BRACKET.h  LEFT_SQUARE_BRACKET_NOT.h  LETTER.h  MIN.h  NOT.h  NUMBER.h  N_.h  OPTIONAL.h  OR.h  OTHER.h  PLUS.h  RIGHT_BRACKET.h  RIGHT_CURLY_BRACKET.h  RIGHT_SQUARE_BRACKET.h  R_.h  SLASH.h  SPACE.h  STAR.h  TAB.h  T_.h  UNDERSCORE.h  V_.h  any.h  any_letter.h  any_letter_exclude_underscore.h  any_number.h  capture.h  capture_letter.h  capture_letter_range.h  capture_logic.h  capture_number.h  capture_number_range.h  capture_range.h  capture_special_character.h  (+46 more)
dregx/include/dregx/Ast/Reference/: Access.h
dregx/include/dregx/Ast/Relation/: NodeEnumToText.h  NodeEnumToType.h  NodeIsInlined.h  NodeIsNonTerminal.h  NodeIsTerminal.h  NodeTextToEnum.h  NodeTypeToEnum.h
dregx/include/dregx/Ast/Visitor/: Visitor.h
dregx/include/dregx/Ast/Visualisation/: Graph.h
dregx/include/dregx/Bison/: Parser.h
dregx/include/dregx/Flex/: Lexer.h
dregx/include/dregx/Ir/: Capture.h  CaptureRange.h  CaptureType.h  Character.h  EscapeCharacter.h  Extension.h  Group.h  NotCapture.h  OrGroup.h  Square.h  Word.h
dregx/include/dregx/Statemachine/: Conditional.h  ConvertRegexToDFA.h  State.h  Statemachine.h  Transition.h  TransitionTable.h
dregx/include/dregx/Statemachine/Algorithm/: Algorithm.h  Flag.h
dregx/include/dregx/Statemachine/Algorithm/DFA/: And.h  Concatenate.h  Or.h
dregx/include/dregx/Statemachine/Algorithm/DFA/Type/: ProductionConstructionState.h
dregx/include/dregx/Statemachine/Algorithm/NDFA/: Concatenate.h  Or.h
dregx/lib/: deamer.cmake  dregx.cpp
dregx/lib/Deamer/: Analyzer.cpp  Fuzzer.cpp  Regex.cpp
dregx/lib/Deamer/V2/: CBAnalyzer.cpp  CBRegex.cpp  CBStatemachine.cpp  Regex.cpp  Statemachine.cpp
dregx/lib/Ir/: Capture.cpp  CaptureRange.cpp  Character.cpp  EscapeCharacter.cpp  Extension.cpp  Group.cpp  NotCapture.cpp  OrGroup.cpp  Square.cpp  Word.cpp
dregx/lib/Statemachine/: Conditional.cpp  ConvertRegexToDFA.cpp  State.cpp  Statemachine.cpp  Transition.cpp  TransitionTable.cpp
dregx/lib/Statemachine/Algorithm/: Algorithm.cpp  Flag.cpp
dregx/lib/Statemachine/Algorithm/DFA/: And.cpp  Concatenate.cpp  Or.cpp
dregx/lib/Statemachine/Algorithm/DFA/Type/: ProductionConstructionState.cpp
dregx/lib/Statemachine/Algorithm/NDFA/: Concatenate.cpp  Or.cpp
dregx/sources/DeamerDefaultApplication/Deamer/AstViewer/: CMakeLists.txt  main.cpp
dregx/sources/DeamerDefaultApplication/Deamer/TokenViewer/: CMakeLists.txt  main.cpp
dregx/tests/: CMakeLists.txt
dregx/tests/dregx/Analyzer/: TestAnalyzer.cpp  TestCBAnalyzer.cpp
dregx/tests/dregx/Ast/: TestTranslateToIr.cpp
dregx/tests/dregx/Fuzzer/: TestFuzzer.cpp
dregx/tests/dregx/Parser/: TestParserInput.cpp
dregx/tests/dregx/Regex/: TestRegex.cpp
dregx/tests/dregx/Statemachine/: TestAndDFA.cpp  TestConvertRegexToDFA.cpp  TestConvertToTransitionTable.cpp  TestEqualDFA.cpp  TestFlavor.cpp
